--- a/templates/index.html.erb
+++ b/templates/index.html.erb
@@ -1,7 +1,8 @@
 <html>
   <body>
-    <h1>Hello,World!</h1>
+    <h1>Hello,NEW World!</h1>
     <h2>HOSTNAME:<%=node['hostname']%></h2>
     <h2>IPADDRESS:<%=node['ipaddress']%></h2>
-  </body>
+    <img src="shaw.jpg">  
+</body>
 </html>
